# gantry

./: .flake8  .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
.github/: release.yml
.github/workflows/: release.yml  test.yml
samples/: README.md
samples/build-image/: README.md  _build.sh  service.yml  traefik.yml
samples/build-image/simple-app/: Dockerfile  service.yml
samples/simple-tls/: README.md  _build.sh  service.yml  traefik.yml
samples/simple-tls/hello-world/: Dockerfile  index.js  service.yml
scripts/: build-sample  run-mypy
src/gantry/: __init__.py  _compose_spec.py  _types.py  build.py  build_manifest.py  cli.py  config.py  console.py  docker.py  exceptions.py  logging.py  resources.py  services.py  yaml.py
src/gantry/cli/: _common.py  _git.py  _main.py  _util.py  build.py  configure.py  forge.py  schemas.py
src/gantry/exceptions/: __init__.py  _base.py  build.py  build_manifest.py  cli.py  config.py  docker.py  forge.py  images.py  service_manager.py  services.py
src/gantry/forge/: __init__.py  client.py  gitea.py
src/gantry/routers/: __init__.py  provider.py
src/gantry/routers/traefik/: _config.py  _provider.py  proxy-service.yml
src/gantry/schemas/: __init__.py  build_manifest.json  config.json  service.json  service_group.json
src/gantry/targets/: __init__.py  _common.py  compose.py  image.py
src/service_manager/: _types.py  build.py  cli.py
src/service_manager/routers/: provider.py
src/service_manager/routers/traefik/: __init__.py  _config.py  _provider.py
test/: conftest.py  test_build.py  test_build_manifest.py  test_config.py  test_docker.py  test_forge.py  test_schema_export.py  test_service_definition.py  test_target.py  test_traefik_router.py
test/samples/configs/: basic.yml  container-repo.yml
test/samples/manifests/: bad-manifest.json  example.json
test/samples/router/traefik-custom-config/: service.yml  traefik-custom.yml
test/samples/router/traefik-custom-socket/: service.yml
test/samples/router/traefik-default/: service.yml
test/samples/router/traefik-disable-dashboard/: service.yml
test/samples/router/traefik-dynamic-config/: service.yml  traefik.yml
test/samples/router/traefik-enable-dashboard/: service.yml
test/samples/router/traefik-enable-tls/: service.yml  traefik.yml
test/samples/service-definition/build-args/: service.yml
test/samples/traefik-default/: traefik.yml
(+11 files in other folders)
