[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "gantry"
authors = [{name = "Richard Rzeszutek"}]
readme = "README.md"
version = "0.4.1"
description = "Manager Dockerized services on single-host deployments."
requires-python = "~=3.10"
dependencies = [
    "click ~= 8.1",
    "jinja2 ~= 3.1",
    "jsonschema ~= 4.16",
    "ruamel.yaml ~= 0.17"
]

[project.optional-dependencies]
dev = [
    "flake8",
    "mypy",
    "pytest",
    "pytest-github-actions-annotate-failures",
    "types-jsonschema"
]

[project.scripts]
gantry = "gantry.cli:main"

[tool.flit.sdist]
exclude=[".github", "scripts"]
