[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "gantry"
authors = [{name = "Richard Rzeszutek"}]
readme = "README.md"
version = "0.5.0"
description = "Manager Dockerized services on single-host deployments."
requires-python = "~=3.10"
dependencies = [
    "certifi == 2023.7.22",
    "click == 8.1.*",
    "docker == 6.1.*",
    "jinja2 == 3.1.*",
    "jsonschema == 4.17.*",
    "pygit2 == 1.13.*",
    "rich == 13.3.*",
    "ruamel.yaml == 0.17.*",
    "urllib3 == 2.0.*"
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "mypy",
    "pytest",
    "pytest-github-actions-annotate-failures",
    "types-jsonschema"
]

[project.scripts]
gantry = "gantry.cli:main"

[tool.flit.sdist]
exclude=[".github", "scripts"]
