[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gantry"
authors = [{name = "Richard Rzeszutek"}]
readme = "README.md"
version = "0.7.0"
description = "Manager Dockerized services on single-host deployments."
requires-python = "==3.13.*"
dependencies = [
    "certifi == 2025.6.15",
    "click == 8.1.*",
    "docker == 7.1.*",
    "jinja2 == 3.1.*",
    "jsonschema == 4.17.*",
    "pygit2 == 1.18.*",
    "rich == 13.3.*",
    "ruamel.yaml == 0.17.*",
    "urllib3 == 2.5.*"
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "mypy",
    "pytest",
    "pytest-github-actions-annotate-failures",
    "types-jsonschema"
]

[project.scripts]
gantry = "gantry.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"gantry.schemas" = ["*.json"]
